tests/baselines/reference/inheritanceMemberAccessorOverridingProperty.errors.txt
tests/cases/compiler/inheritanceMemberAccessorOverridingProperty.ts(6,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceMemberAccessorOverridingProperty.ts(9,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/inheritanceMemberAccessorOverridingProperty.ts (2 errors) ====
    class a {
        x: string;
    }
    
    class b extends a {
        get x() {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return "20";
        }
        set x(aValue: string) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        }
    }